--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
 baseURL = "https://example.org/"
 languageCode = "en-us"
-title = "Danieli Service New Static Hugo Website"
+title = "Danieli Service Test 1"
 theme = "ananke"
